Merge branch 'Yiftach_PartB' of https://github.com/yiftachsa/IR_engine into MeravPartB
# Conflicts:
#	target/classes/CorpusProcessing/CallableMerge.class
#	target/classes/CorpusProcessing/DictionaryEntryTrio.class
#	target/classes/CorpusProcessing/Document.class
#	target/classes/CorpusProcessing/Documenter.class
#	target/classes/CorpusProcessing/Indexer.class
#	target/classes/CorpusProcessing/Parse.class
#	target/classes/CorpusProcessing/ReadFile.class
#	target/classes/CorpusProcessing/RunnableMerge.class
#	target/classes/CorpusProcessing/RunnableParse.class
#	target/classes/CorpusProcessing/Stemmer.class
#	target/classes/CorpusProcessing/TermDocumentTrio.class
#	target/classes/CorpusProcessing/Trio.class
#	target/classes/Model/MyModel.class